// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WidgetTextUpdate displays multiline text 1`] = `
<div
  className="WidgetTextUpdate-divNoWrap-2"
>
  <WithStyles(Typography)
    className="WidgetTextUpdate-textUpdateNoWrap-3"
    style={Object {}}
  >
    This is a slightly longer example of some text which should be split over multiple lines when the widget is in a normal sized div
  </WithStyles(Typography)>
</div>
`;

exports[`WidgetTextUpdate displays text 1`] = `
<div
  className="WidgetTextUpdate-div-1"
>
  <WithStyles(Typography)
    className="WidgetTextUpdate-textUpdate100-5"
    noWrap={true}
    style={Object {}}
  >
    Hello World
  </WithStyles(Typography)>
</div>
`;

exports[`WidgetTextUpdate displays with units 1`] = `
<div
  className="WidgetTextUpdate-div-1"
>
  <WithStyles(Typography)
    className="WidgetTextUpdate-textUpdate80-4"
    noWrap={true}
    style={Object {}}
  >
    1.21
  </WithStyles(Typography)>
  <WithStyles(Typography)
    className="WidgetTextUpdate-unitBox-6"
    noWrap={true}
  >
    GW
  </WithStyles(Typography)>
</div>
`;
